# VerilogVizSim

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
build-wasm/: Makefile  MyVerilogSimMain.js  MyVerilogSimMain.wasm  VerilogSimWasm.js  VerilogSimWasm.wasm
build-wasm/tests/: Makefile  runTests.js  runTests.wasm
gui/: VerilogSimWasm.js  index.html
gui/js/: diagram.js  main.js
include/mvs/: AST.h  Lexer.h  Parser.h  algorithms.h  algorithms.hpp  lexer.hpp  module.hpp  netlist_extractor.hpp  netlist_to_dot.hpp  netlist_types.hpp  parser.hpp  simulator.hpp  utils.hpp  version.hpp
include/mvs/visitors/: node_count.h  node_count.hpp  print.hpp
src/: lexer.cpp  main.cpp  netlist_extractor.cpp  netlist_to_dot.cpp  parser.cpp  wasm_bindings.cpp
tests/: CMakeLists.txt  full_simulator_tests.cpp  parse_expression_tests.cpp  parse_module_stub_test.cpp  simulator_tests.cpp  tokenize_fn_test.cpp
